--- a/views/what.html
+++ b/views/what.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -17,9 +17,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Employee</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>Search</title>
 </head>
+<style>
+ /* Style the input field */
+#searchbar{
+  margin-top: 25%;
 
+}
+ </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -46,6 +55,42 @@
             </div>
         </div>
     </nav>
+
+    <div class="container">
+
+      <!-- Search form -->
+
+      <div class="input-group sm-form form-sm form-1 pl-0" id = "searchbar"style = "float:left">
+        <div class="input-group-prepend">
+          <span class="input-group-text purple lighten-3" id="basic-text1"><i class="glyphicon glyphicon-search"
+            aria-hidden="true"></i></span>
+        </div>
+        <input class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search" style="position:absolute;width: 80%; height: 50px">
+      </div>
+
+
+      <div class="form-inline dropdown " style="position:relative; float: right; margin-right: 10%; height: 50px;">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="height: 50px" >Filter By
+        <ul class="dropdown-menu">
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Working Experience</a></li>
+          <li><a href="#">Job Title</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+
+    <script>
+    $(document).ready(function(){
+      $("#myInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $(".dropdown-menu li").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+    </script>
 </body>
 
 </html>
